Add links to lecture on 3/4 and update reading list
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Parallel Architecture/_posts/2000-04-01-memory.md
+++ b/modules/Parallel Architecture/_posts/2000-04-01-memory.md
@@ -5,6 +5,8 @@ discussion: 816348374940123176
 
 ![An SMBC this time](https://www.smbc-comics.com/comics/1583424176-20200305.png)
 
+{% include reading-grad.html section="Chapter 5" %}
+
 ## Cache coherence and memory consistency
 
 These two topics are near and dear to my heart.
@@ -16,6 +18,8 @@ I could teach a whole course just on that book!
 
 ### Cache coherence
 
+{% include reading-grad.html section="Section 5.4" %}
+
 {% include video.html id="0_wyed932m" %}
 
 This video discusses what happens with the previous barrier example when we add caches to the system.
@@ -25,6 +29,8 @@ This video discusses what happens with the previous barrier example when we add 
 This video goes into the detail of one cache coherence protocol implementation that has three states: Modified, shared, and invalid or MSI.
 
 ### Memory consistency
+
+{% include reading-grad.html section="Section 5.6" %}
 
 While coherence ensures that caches stay transparent to the programmer, the *memory consistency model* is actually something that's part of the ISA and defines how the programmer should expect multi-threaded programs to behave.
 Another way of looking at this is that cache coherence defines what happens to a single address (e.g., the single-writer multi-reader invariant) whereas memory consistency defines the behavior when multiple addresses are involved.
