Link to lecture on 5/7
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/modules/Parallel Architecture/_posts/2000-04-01-memory.md
+++ b/modules/Parallel Architecture/_posts/2000-04-01-memory.md
@@ -7,6 +7,10 @@ discussion: 816348374940123176
 
 {% include reading-grad.html section="Chapter 5" %}
 
+Lecture from 3/7
+
+{% include video.html id="1_jki2ok9l" %}
+
 ## Cache coherence and memory consistency
 
 These two topics are near and dear to my heart.
