Update due dates with data

--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -8,46 +8,49 @@ In this course, you will be implementing the Davis IN-Order CPU (DINO CPU) desig
 
 ## DINO CPU documentation
 
-See the [GitHub Repository](https://github.com/jlpteaching/dinocpu-wq22) for high-level details about the DINO CPU project and how to contribute.
+See the [GitHub Repository]({{ site.course.data.dino_cpu_link }}) for high-level details about the DINO CPU project and how to contribute.
 
-You can find documentation in the [DINO CPU repository](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/).
+You can find documentation in the [DINO CPU repository]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/).
 
-[Chisel notes](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/chisel-notes/overview.md) goes through an introduction to Chisel and how to create hardware.
+[Chisel notes]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) goes through an introduction to Chisel and how to create hardware.
 
-The [Chisel cheat sheet](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/chisel-notes/overview.md) is particularly useful for the projects.
+The [Chisel cheat sheet]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) is particularly useful for the projects.
 
-There's also a list of [common errors](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/common-errors.md) that you may run into while working on the DINO CPU.
+There's also a list of [common errors]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/common-errors.md) that you may run into while working on the DINO CPU.
 
-Finally, for debugging, the documentation on [Single stepping](https://github.com/jlpteaching/dinocpu-wq22/blob/main/documentation/single-stepping.md) will be very useful.
+Finally, for debugging, the documentation on [Single stepping]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/single-stepping.md) will be very useful.
 
 ## Assignments/Projects
 
-### [Assignment 1: Getting started with Chisel]({{'modules/dino cpu/assignment1' | relative_url}})
+### [Assignment 1: Getting started with Chisel]({{'modules/dino cpu/assignment1' | relative_url}}) DUE *{{ site.data.course.dino_1 }}*
 
 In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
 First, you will implement the ALU control unit that you will use in the single cycle CPU design.
 Then, you will begin implementing the single-cycle CPU datapath.
 By the end of this assignment you will be able to correctly execute 15 RISC-V instructions (about 24%)!
 
-### [Assignment 2: A single-cycle CPU design]({{'modules/dino cpu/assignment2' | relative_url}})
+### [Assignment 2: A single-cycle CPU design]({{'modules/dino cpu/assignment2' | relative_url}}) DUE *{{ site.data.course.dino_2 }}*
 
 In this assignment, you will extend what you started in [assignment 1]({{'modules/dino cpu/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV64I instruction set!
 To do this, you will complete the datapath implementation and implement the control logic for the processor.
 At the end, you will be able to run *real applications* compiled with GCC on your processor!
 
-### [Assignment 3: A pipelined CPU design]({{'modules/dino cpu/assignment3' | relative_url}})
+### [Assignment 3: A pipelined CPU design]({{'modules/dino cpu/assignment3' | relative_url}}) DUE *{{ site.data.course.dino_32 }}*
 
 In this assignment, broken into two parts, you will be implementing a more realistic, pipelined-based core design.
 In the first part, you will split your single cycle design into five different pipeline stages and ensure that all instructions except control have a correctly wired datapath.
 Then, in part two you will finish wiring the rest of the datapath and the control path for the control instructions and implement the hazard detection and forwarding logic.
 
-### [Assignment 4: TBD]({{'modules/dino cpu/assignment4' | relative_url}})
+### [Assignment 4: TBD]({{'modules/dino cpu/assignment4' | relative_url}}) DUE *{{ site.data.course.dino_4 }}*
 
 TBD
 
-### [Assignment 5: TBD]({{'modules/dino cpu/assignment5' | relative_url}})
+### [Assignment 5: Parallel architecture with gem5]({{'modules/gem5/assignment5' | relative_url}}) DUE *{{ site.data.course.dino_5 }}*
 
-TBD
+Instead of doing another DINO CPU assignment, you will be using [gem5](https://www.gem5.org/) for this assignment.
+Since parallel systems are very complex, I can't expect you to be able to design a working system in Chisel.
+However, gem5 already has all of the models necessary to run a full-fledged parallel system (it can even boot Linux!).
+So, we'll be using gem5 and doing the same assignment as ECS 201A.
 
 ## [Discussions]({{'modules/dino cpu/discussions' | relative_url}})
 
