--- a/modules/Memory Architecture/_posts/2000-01-10-index.md
+++ b/modules/Memory Architecture/_posts/2000-01-10-index.md
@@ -27,3 +27,7 @@ We will discuss the underlying principles that make caches efficient, and how ha
 Finally, we'll step up a level and look at how operating systems allow multiple programs to share a single memory through [virtualization](../virtual/).
 
 {% include page-toc.html name="virtual" %}
+
+[154B Assignment 4]({{'modules/dino cpu/assignment4' | relative_url}}) **DUE {{ site.data.course.dates.dino_4 }}** 
+
+[201A Assignment 4]({{'modules/gem5/assignment3' | relative_url}}) **DUE {{ site.data.course.dates.dino_4 }}** 
