--- a/modules/Parallel Architecture/_posts/2000-01-10-index.md
+++ b/modules/Parallel Architecture/_posts/2000-01-10-index.md
@@ -7,16 +7,6 @@ However, we can overcome this, by leveraging *multiple processors*.
 
 In this section, we're going to learn about how to combine multiple *independent* instruction streams executing on different hardware to improve performance.
 
-Unfortunately, we're running out of time this quarter.
-If we had another 4-6 weeks, I would love to spend that entire time on this subject!
-But, we can't.
-
-Therefore, we're going to touch on a number of topics quickly.
-Not all of the videos/lectures in the following section will be required.
-Feel free to skip the ones that are not required if you need to spend time on other classes, or just need a mental break.
-However, if you're interested to learn about how modern architecture work, you'll find lots of good information in these optional lectures.
-The optional lectures will be clearly marked.
-
 ## [Parallel system's performance](../performance/)
 
 {% include page-toc.html name="performance" %}
@@ -32,3 +22,7 @@ The optional lectures will be clearly marked.
 ## [Accelerator architecture](../accelerators/)
 
 {% include page-toc.html name="accelerators" %}
+
+This time, both 154B and 201A are going to do the same gem5 assignment!
+
+[154B/201A Assignment 5]({{'modules/gem5/assignment5' | relative_url}}) **DUE {{ site.data.course.dates.dino_5 }}** 
