--- a/modules/Processor Architecture/_posts/2000-01-10-index.md
+++ b/modules/Processor Architecture/_posts/2000-01-10-index.md
@@ -19,7 +19,9 @@ If you did not take ECS 50 or find yourself struggling to keep up in this first 
 
 {% include page-toc.html name="isa" %}
 
-[154B Assignment 1]({{'modules/dino cpu/assignment1' | relative_url}}) **DUE 1/17**
+[154B Assignment 1]({{'modules/dino cpu/assignment1' | relative_url}}) **DUE {{ site.data.course.dates.dino_1 }}**
+
+[201A Assignment 1]({{'modules/gem5/assignment1' | relative_url}}) **DUE {{ site.data.course.dates.dino_1 }}**
 
 See [Machine code examples **VIDEO**](../isa/#machine-code-examples-video) for some helpful hints.
 
@@ -32,7 +34,9 @@ This design is covered in Section 4.3 and 4.4 of *Computer Organization and Desi
 
 {% include page-toc.html name="single-cycle" %}
 
-[154B Assignment 2]({{'modules/dino cpu/assignment2' | relative_url}}) **DUE 1/23**
+[154B Assignment 2]({{'modules/dino cpu/assignment2' | relative_url}}) **DUE {{ site.data.course.dates.dino_2 }}**
+
+[201A Assignment 2]({{'modules/gem5/assignment2' | relative_url}}) **DUE {{ site.data.course.dates.dino_2 }}**
 
 ## Pipelined processor design
 
@@ -42,6 +46,8 @@ This is covered in Section 4.5 and 4.6 of *Computer Organization and Design* and
 
 {% include page-toc.html name="pipelined" %}
 
+[154B Assignment 3.1]({{'modules/dino cpu/assignment3' | relative_url}}) **DUE {{ site.data.course.dates.dino_31 }}** (soft due date)
+
 ## Instruction level parallelism
 
 Finally, we will introduce the idea of [instruction level parallelism](../ilp/) and introduce a couple of algorithms that can be used to extract performance from scalar (not parallel) applications.
@@ -49,6 +55,10 @@ Most of this topic is covered in the graduate level computer architecture course
 
 {% include page-toc.html name="ilp" %}
 
+[154B Assignment 3.2]({{'modules/dino cpu/assignment3' | relative_url}}) **DUE {{ site.data.course.dates.dino_32 }}** 
+
+[201A Assignment 3]({{'modules/gem5/assignment2' | relative_url}}) **DUE {{ site.data.course.dates.dino_32 }}**
+
 ## Test
 
-Date: 2/8. More information to follow.
+Midterm ***in-person* on {{ site.data.course.dates.midterm }}
