--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -22,30 +22,30 @@ Finally, for debugging, the documentation on [Single stepping]({{ site.course.da
 
 ## Assignments/Projects
 
-### [Assignment 1: Getting started with Chisel]({{'modules/dino cpu/assignment1' | relative_url}}) DUE *{{ site.data.course.dino_1 }}*
+### [Assignment 1: Getting started with Chisel]({{'modules/dino cpu/assignment1' | relative_url}}) DUE *{{ site.data.course.dates.dino_1 }}*
 
 In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
 First, you will implement the ALU control unit that you will use in the single cycle CPU design.
 Then, you will begin implementing the single-cycle CPU datapath.
 By the end of this assignment you will be able to correctly execute 15 RISC-V instructions (about 24%)!
 
-### [Assignment 2: A single-cycle CPU design]({{'modules/dino cpu/assignment2' | relative_url}}) DUE *{{ site.data.course.dino_2 }}*
+### [Assignment 2: A single-cycle CPU design]({{'modules/dino cpu/assignment2' | relative_url}}) DUE *{{ site.data.course.dates.dino_2 }}*
 
 In this assignment, you will extend what you started in [assignment 1]({{'modules/dino cpu/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV64I instruction set!
 To do this, you will complete the datapath implementation and implement the control logic for the processor.
 At the end, you will be able to run *real applications* compiled with GCC on your processor!
 
-### [Assignment 3: A pipelined CPU design]({{'modules/dino cpu/assignment3' | relative_url}}) DUE *{{ site.data.course.dino_32 }}*
+### [Assignment 3: A pipelined CPU design]({{'modules/dino cpu/assignment3' | relative_url}}) DUE *{{ site.data.course.dates.dino_32 }}*
 
 In this assignment, broken into two parts, you will be implementing a more realistic, pipelined-based core design.
 In the first part, you will split your single cycle design into five different pipeline stages and ensure that all instructions except control have a correctly wired datapath.
 Then, in part two you will finish wiring the rest of the datapath and the control path for the control instructions and implement the hazard detection and forwarding logic.
 
-### [Assignment 4: TBD]({{'modules/dino cpu/assignment4' | relative_url}}) DUE *{{ site.data.course.dino_4 }}*
+### [Assignment 4: TBD]({{'modules/dino cpu/assignment4' | relative_url}}) DUE *{{ site.data.course.dates.dino_4 }}*
 
 TBD
 
-### [Assignment 5: Parallel architecture with gem5]({{'modules/gem5/assignment5' | relative_url}}) DUE *{{ site.data.course.dino_5 }}*
+### [Assignment 5: Parallel architecture with gem5]({{'modules/gem5/assignment5' | relative_url}}) DUE *{{ site.data.course.dates.dino_5 }}*
 
 Instead of doing another DINO CPU assignment, you will be using [gem5](https://www.gem5.org/) for this assignment.
 Since parallel systems are very complex, I can't expect you to be able to design a working system in Chisel.
