Fix more dates and remove lecture videos

--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -6,7 +6,7 @@ title: "Class Introduction"
 
 First of all, welcome!
 
-Welcome to UC Davis ECS 154B/201A Computer Architecture in Winter Quarter 2022!
+Welcome to UC Davis ECS 154B/201A Computer Architecture in {{ site.data.course.quarter }}!
 This is the first time we're combining the undergraduate and graduate courses.
 I'm looking forward to improving the computer architecture course for both the undergrads and the grad students!
 
