--- a/modules/Processor Architecture/_posts/2000-02-01-isa.md
+++ b/modules/Processor Architecture/_posts/2000-02-01-isa.md
@@ -59,7 +59,7 @@ Specifically, we'll be using the rv32i variant of RISC-V.
 You can find *all* of the details about the RISC-V ISA in the [RISC-V Specification document](https://riscv.org/specifications/isa-spec-pdf/).
 
 You can find the instructions that we care about, the 32-bit integer instructions, in the [opcode table]({{"/img/riscv-instr.pdf" | relative_url}}).
-Note that *this quarter* (Winter Quarter 2022), the 154B class will be implementing the 64-bit version of the RISC-V integer ISA.
+Note that *this quarter* ({{ site.data.course.quarter }}), the 154B class will be implementing the 64-bit version of the RISC-V integer ISA.
 Very little changes from what is discussed below.
 Details of the 64-bit ISA are covered in the book, and in the RISC-V Reader.
 
