Remove quizzes and old video/reading list

--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -16,23 +16,16 @@ My goal with this class is to encourage as much participation and interaction as
 I learn best from interacting with others.
 So, I'm going to provide you with as many ways to interact with me, with our TAs (Maryam and Hoa), and each other as possible.
 
-## Lecture 1: Introduction
-
-Unfortunately, this first week is online.
-After the lecture, I will post the video below.
-
-{% include video.html id="1_cya38ci4" %}
-
-### Tests
+## Tests
 
 There will be two tests this quarter.
 The tests will be after each of the main modules, [processor architecture](../../processor architecture/index) and [memory architecture](../../memory architecture/index)/[parallel architecture](../../parallel architecture/index).
 
 More information on the tests can be found [on the syllabus]({{'/syllabus' | relative_url}}#tests).
 
-### Books
+## Books
 
-#### Assigned readings
+### Assigned readings
 
 Throughout this course you will find "Reading" callouts.
 Most modules will have some reading associated with them.
@@ -48,7 +41,7 @@ Examples of how these will appear are shown below.
 
 In rare cases where there is a difference between the two editions of the Computer Organization and Design texts, the reading for each edition will be specified.
 
-#### ECS 154B textbook
+### ECS 154B textbook
 
 There are two books for this class.
 The lectures and reading will be from *Computer Organization and Design RISC-V Edition: The Hardware/Software Interface* by D. A. Patterson and J. L. Hennessy.
@@ -63,26 +56,12 @@ I have also suggested that you get *The RISC-V Reader: An Open Architecture Atla
 I find this book to be a very useful reference while developing the DINO CPU.
 However, all of the information in this book can be found for free in the [RISC-V specification](https://riscv.org/specifications/isa-spec-pdf/) although the specification isn't as easy to read.
 
-#### ECS 201A readings
+### ECS 201A readings
 
 For the graduate section, ECS 201A, we will be using *Computer Architecture: A Quantitative Approach* 6th Edition. John L. Hennessy and David A. Patterson.
 It's a very readable book.
 Also, this is a great textbook to have around if you're planning on staying in the computer systems field.
 
 There will also be a weekly paper reading for the grad section.
-You will be required to write a short summary of the paper before each discussion section, and we will discuss your reviews during discussion.
-
-The reading list is shown below.
-
-|   Due Date      | Reading Material    |
-|-----------------|---------------------|
-| 01/05/2022      | [There’s plenty of room at the Top: What will drive computer performance after Moore’s law?](https://www.science.org/doi/10.1126/science.aam9744)|
-| 01/12/2022      | [Read Chapters 1-3: Learning gem5 (Intro, Getting Started, Modifying/Extending)](https://www.gem5.org/documentation/learning_gem5/introduction/) and Read Chapter 5, Computer Architecture Performance Evaluation Methods|
-| 01/19/2022      | [Power Struggles: Revisiting the RISC vs. CISC Debate on Contemporary ARM and x86 Architectures](https://research.cs.wisc.edu/vertical/papers/2013/hpca13-isa-power-struggles.pdf)|
-| 01/26/2022      | [Instruction-Level Parallel Processing](https://www.jstor.org/stable/pdf/2879168.pdf)|
-| 02/02/2022      | [Dynamic speculation and synchronization of data dependences](https://dl.acm.org/doi/10.1145/264107.264189)|
-| 02/09/2022      | [Minimalist Open-page: A DRAM Page-mode Scheduling Policy for the Many-core Era](https://lca.ece.utexas.edu/pubs/MICRO44_Dimitris_Kaseridis.pdf)|
-| 02/16/2022      | [Fundamental Latency Trade-offs in Architecting DRAM Caches](https://moin.ece.gatech.edu/papers/micro12.pdf)|
-| 02/23/2022      | [Efficient Virtual Memory for Big Memory Servers](https://research.cs.wisc.edu/multifacet/papers/isca13_direct_segment.pdf)|
-| 03/02/2022      | [Pioneering Chiplet Technology and Design for the AMD EPYC™ and Ryzen™ Processor Families : Industrial Product](https://ieeexplore.ieee.org/document/9499852)|
-| 03/09/2022      | [In-Datacenter Performance Analysis of a Tensor Processing Unit](https://dl.acm.org/doi/10.1145/3079856.3080246)|
+You will be required to read the paper and discuss on [Perusall]({{ site.data.course.persuall_link }}).
+The reading list can be found on [Perusall]({{ site.data.course.persuall_link }}).
