Fix name of site.data
It's site.data.course, not site.course.data

Signed-off-by: Hoa Nguyen <hoanguyen@ucdavis.edu>

--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -8,17 +8,17 @@ In this course, you will be implementing the Davis IN-Order CPU (DINO CPU) desig
 
 ## DINO CPU documentation
 
-See the [GitHub Repository]({{ site.course.data.dino_cpu_link }}) for high-level details about the DINO CPU project and how to contribute.
+See the [GitHub Repository]({{ site.data.course.dino_cpu_link }}) for high-level details about the DINO CPU project and how to contribute.
 
-You can find documentation in the [DINO CPU repository]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/).
+You can find documentation in the [DINO CPU repository]({{ site.data.course.dino_cpu_link }}/blob/main/documentation/).
 
-[Chisel notes]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) goes through an introduction to Chisel and how to create hardware.
+[Chisel notes]({{ site.data.course.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) goes through an introduction to Chisel and how to create hardware.
 
-The [Chisel cheat sheet]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) is particularly useful for the projects.
+The [Chisel cheat sheet]({{ site.data.course.dino_cpu_link }}/blob/main/documentation/chisel-notes/overview.md) is particularly useful for the projects.
 
-There's also a list of [common errors]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/common-errors.md) that you may run into while working on the DINO CPU.
+There's also a list of [common errors]({{ site.data.course.dino_cpu_link }}/blob/main/documentation/common-errors.md) that you may run into while working on the DINO CPU.
 
-Finally, for debugging, the documentation on [Single stepping]({{ site.course.data.dino_cpu_link }}/blob/main/documentation/single-stepping.md) will be very useful.
+Finally, for debugging, the documentation on [Single stepping]({{ site.data.course.dino_cpu_link }}/blob/main/documentation/single-stepping.md) will be very useful.
 
 ## Assignments/Projects
 
