--- a/modules/DINO CPU/_posts/2000-01-01-index.md
+++ b/modules/DINO CPU/_posts/2000-01-01-index.md
@@ -27,11 +27,11 @@ Finally, for debugging, the documentation on [Single stepping]({{ site.data.cour
 In this assignment, we will introduce you to the [Chisel](https://www.chisel-lang.org/) "hardware construction language" by asking you to implement a couple of simple circuits in Chisel.
 First, you will implement the ALU control unit that you will use in the single cycle CPU design.
 Then, you will begin implementing the single-cycle CPU datapath.
-By the end of this assignment you will be able to correctly execute 15 RISC-V instructions (about 24%)!
+By the end of this assignment you will be able to correctly execute 28 RISC-V instructions (about 37%)!
 
 ### [Assignment 2: A single-cycle CPU design]({{'modules/dino cpu/assignment2' | relative_url}}) DUE *{{ site.data.course.dates.dino_2 }}*
 
-In this assignment, you will extend what you started in [assignment 1]({{'modules/dino cpu/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV64I instruction set!
+In this assignment, you will extend what you started in [assignment 1]({{'modules/dino cpu/assignment-1' | relative_url}}) and implement the rest of the RISC-V RV64IM instruction set!
 To do this, you will complete the datapath implementation and implement the control logic for the processor.
 At the end, you will be able to run *real applications* compiled with GCC on your processor!
 
