Updating a link in assignment 0.

--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -1,4 +1,20 @@
 ---
-title: gem5 Assignments (for ECS 201A)
+Author: Mahyar Samani
+Title: gem5 Assignments (for ECS 201A)
 ---
 
+
+## Table of contents
+
+- [Assignment 0](#assignment-0)
+
+## Assignment 0
+
+In this assignemt you will learn how to use gem5's standard libary to
+
+- describe the computer system you would like to simulate,
+- set up the workloads and benchmarks you need to evaluate your system's performance,
+- set up a simulation environment,
+- use gem5 in command line.
+
+This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
