--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -18,3 +18,4 @@ In this assignemt you will learn how to use gem5's standard libary to
 - use gem5 in command line.
 
 This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
+Start [assignment 0]({{'modules/gem5/_posts/2000-02-01-assignment0.md' | relative_utl}})
