--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -10,7 +10,7 @@ Title: gem5 Assignments (for ECS 201A)
 
 ## Assignment 0
 
-In this assignemt you will learn how to use gem5's standard libary to
+In this assignemt you will learn how to use gem5's standard libary to:
 
 - describe the computer system you would like to simulate,
 - set up the workloads and benchmarks you need to evaluate your system's performance,
@@ -18,4 +18,16 @@ In this assignemt you will learn how to use gem5's standard libary to
 - use gem5 in command line.
 
 This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
-Start [assignment 0]({{'modules/gem5/_posts/2000-02-01-assignment0.md' | relative_utl}})
+Start [assignment 0](*{{'modules/gem5/_posts/2000-02-01-assignment0.md' | relative_url}}*).
+
+## Assignment 1
+
+In this assignment you will:
+
+- compare the performance of a single-cycle CPU and an in-order pipelined CPU,
+- evaluate the effect of changing CPU clock frequency on the overall performance,
+- and investigate the impact of memory on the overall performance of the system.
+
+The assignment is due on {{ site.data.course.gem5_1 }}.
+Read about submission deadlines on the assignment page.
+Start [assignment 1](*{{'modules/gem5/_posts/2000-03-01-assignment1.md' | relative_url}}*).
