--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -19,7 +19,7 @@ In this assignemt you will learn how to use gem5's standard libary to:
 
 This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
 
-Start [assignment 0](*{{'2000-02-01-assignment0.md' | relative_url}}*).
+Start [assignment 0](*{{'2000-02-01-assignment0.md'}}*).
 
 ## Assignment 1
 
@@ -32,4 +32,4 @@ In this assignment you will:
 The assignment is due on {{ site.data.course.gem5_1 }}.
 Read about submission deadlines on the assignment page.
 
-Start [assignment 1](*{{'2000-03-01-assignment1.md' | relative_url}}*).
+Start [assignment 1](*{{'2000-03-01-assignment1.md'}}*).
