--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -19,7 +19,7 @@ In this assignemt you will learn how to use gem5's standard libary to:
 
 This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
 
-Start [assignment 0]({{'modules/gem5/2000-02-01-assignment0' | relative_url}}).
+Start [assignment 0]({{'modules/gem5/assignment0' | relative_url}}).
 
 ## Assignment 1
 
@@ -29,7 +29,7 @@ In this assignment you will:
 - evaluate the effect of changing CPU clock frequency on the overall performance,
 - and investigate the impact of memory on the overall performance of the system.
 
-The assignment is due on {{ site.data.course.dates.gem5_1 }}.
+The assignment is due on *{{ site.data.course.dates.gem5_1 }}*.
 Read about submission deadlines on the assignment page.
 
-Start [assignment 1]({{'modules/gem5/2000-03-01-assignment1' | relative_url}}).
+Start [assignment 1]({{'modules/gem5/assignment1' | relative_url}}).
