Adding assignment 2 to the index page.

--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -7,6 +7,8 @@ Title: gem5 Assignments (for ECS 201A)
 ## Table of contents
 
 - [Assignment 0](#assignment-0)
+- [Assignment 1](#assignment-1)
+- [Assignment 2](#assignment-2)
 
 ## Assignment 0
 
@@ -33,3 +35,16 @@ The assignment is due on *{{ site.data.course.dates.gem5_1 }}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 1]({{'modules/gem5/assignment1' | relative_url}}).
+
+## Assignment 2
+
+In this assignment you will:
+
+- learn how you can use gem5 to profile programs,
+- evaluate the performance of different configurations of a pipeline,
+- and use Amdahl's law in practice.
+
+The assignment is due on *{{ site.data.course.dates.gem5_2 }}*.
+Read about submission deadlines on the assignment page.
+
+Start [assignment 2]({{'modules/gem5/assignment2' | relative_url}}).
