Updating index page and adding deadline.

--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -9,6 +9,7 @@ Title: gem5 Assignments (for ECS 201A)
 - [Assignment 0](#assignment-0)
 - [Assignment 1](#assignment-1)
 - [Assignment 2](#assignment-2)
+- [Assignment 3](#assignment-3)
 
 ## Assignment 0
 
@@ -48,3 +49,16 @@ The assignment is due on *{{ site.data.course.dates.gem5_2 }}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 2]({{'modules/gem5/assignment2' | relative_url}}).
+
+## Assignment 3
+
+In this assignment you will:
+
+- Show how applications have different behaviors as the microarchitecture changes.
+- Give you experience investigating the *bottleneck* in a particular architecture.
+- Improve your understanding of out-of-order processor architecture.
+
+The assignment is due on *{{ site.data.course.dates.gem5_3 }}*.
+Read about submission deadlines on the assignment page.
+
+Start [assignment 3]({{'modules/gem5/assignment3' | relative_url}}).
