--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -68,9 +68,9 @@ Start [assignment 3]({{'modules/gem5/assignment3' | relative_url}}).
 In this assignment, you'll be investigating the performance impacts of different cache architectures and different algorithm designs on matrix multiplication. 
 The goals of this assignment are:
 
-Show how algorithms have different behaviors as the microarchitecture changes.
-Show how changing the algorithm can change performance on the same microarchitecture.
-Improve your understanding of cache architectures.
+- Show how algorithms have different behaviors as the microarchitecture changes.
+- Show how changing the algorithm can change performance on the same microarchitecture.
+- Improve your understanding of cache architectures.
 
 The assignment is due on *{{ site.data.course.dates.gem5_4 }}*.
 Read about submission deadlines on the assignment page.
