Adding assign-4 and assign-5 to table of contents

--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -10,6 +10,8 @@ Title: gem5 Assignments (for ECS 201A)
 - [Assignment 1](#assignment-1)
 - [Assignment 2](#assignment-2)
 - [Assignment 3](#assignment-3)
+- [Assignment 4](#assignment-4)
+- [Assignment 5](#assignment-5)
 
 ## Assignment 0
 
