--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -15,7 +15,7 @@ Title: gem5 Assignments (for ECS 201A)
 
 ## Assignment 0
 
-In this assignemt you will learn how to use gem5's standard libary to:
+In this assignment you will learn how to use gem5's standard library to:
 
 - describe the computer system you would like to simulate,
 - set up the workloads and benchmarks you need to evaluate your system's performance,
