Updates for WQ 2025

--- a/modules/Introduction/_posts/2000-02-01-intro.md
+++ b/modules/Introduction/_posts/2000-02-01-intro.md
@@ -14,7 +14,7 @@ If you would like to see an online-only version of the undergraduate course, you
 
 My goal with this class is to encourage as much participation and interaction as possible.
 I learn best from interacting with others.
-So, I'm going to provide you with as many ways to interact with me, with our TAs (Maryam and Hoa), and each other as possible.
+So, I'm going to provide you with as many ways to interact with me, with our TAs, and each other as possible.
 
 ## Tests
 
