--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -13,8 +13,10 @@ Title: gem5 Assignments (for ECS 201A)
 - [Assignment 4](#assignment-4)
 - [Assignment 5](#assignment-5)
 
-## Assignment 0
+## Assignment 0*Getting started*
 
+A simple assignment to get students started with gem5.
+This will introduce the students to how to use gem5, codespaces, etc.
 In this assignment you will learn how to use gem5's standard library to:
 
 - describe the computer system you would like to simulate,
@@ -22,71 +24,120 @@ In this assignment you will learn how to use gem5's standard library to:
 - set up a simulation environment,
 - use gem5 in command line.
 
-This assignment is not graded and aims to teach students how to use gem5 as a tool for this course.
+The assignment is due on *{{ site.data.course.dates.gem5_0 }}*.
+Read about submission deadlines on the assignment page.
 
 Start [assignment 0]({{'modules/gem5/assignment0' | relative_url}}).
 
-## Assignment 1
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment0_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment0_invitation_link }}
 
+## Assignment 1: *ISA vs Technology*
+
+This assignment compares the performance difference of x86, Arm, and RISC-V ISAs on a simple matrix multiplication workload.
+The performance is compared across ISAs and between 1 GHz and 4 GHz. The goal is to use the Iron Law of Performance to explain the results.
 In this assignment you will:
 
-- compare the performance of a single-cycle CPU and an in-order pipelined CPU,
-- evaluate the effect of changing CPU clock frequency on the overall performance,
-- and investigate the impact of memory on the overall performance of the system.
+- compare the performance of three different ISAs
+- evaluate the effect of changing CPU clock frequency on the overall performance
 
 The assignment is due on *{{ site.data.course.dates.gem5_1 }}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 1]({{'modules/gem5/assignment1' | relative_url}}).
 
-## Assignment 2
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment1_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment1_invitation_link }}
 
+## Assignment 2: *Pipelining*
+
+This assignment compares the performance of an in-order CPU with different pipeline widths, latencies, and depths.
+The goal is to understand the impact of the pipeline on performance.
 In this assignment you will:
 
-- learn how you can use gem5 to profile programs,
-- evaluate the performance of different configurations of a pipeline,
-- and use Amdahl's law in practice.
+- learn how you can use gem5 to obtain an instruction mix
+- construct hypotheses using simple analytical models
+- evaluate the performance of different configurations of a pipeline
 
 The assignment is due on *{{ site.data.course.dates.gem5_2 }}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 2]({{'modules/gem5/assignment2' | relative_url}}).
 
-## Assignment 3
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment2_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment2_invitation_link }}
 
+## Assignment 3: *Out of Order CPU*
+
+This assignment digs into how different parameters of an out-of-order CPU, including width, ROB size, and the number of physical registers, impact performance.
+This assignment uses a variety of workloads to showcase the differences in how these parameters impact performance.
 In this assignment you will:
 
-- Show how applications have different behaviors as the microarchitecture changes.
-- Give you experience investigating the *bottleneck* in a particular architecture.
-- Improve your understanding of out-of-order processor architecture.
+- Show how applications have different behaviors as the microarchitecture changes
+- Give you experience investigating the *bottleneck* in a particular architecture
+- Improve your understanding of out-of-order processor architecture
 
 The assignment is due on *{{ site.data.course.dates.gem5_3 }}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 3]({{'modules/gem5/assignment3' | relative_url}}).
 
-## Assignment 4
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment3_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment3_invitation_link }}
+
+## Assignment 4: *Blocked matrix-multiply*
 
 In this assignment, you'll be investigating the performance impacts of different cache architectures and different algorithm designs on matrix multiplication.
+It reinforces the average memory access time calculation and the impact of cache size on performance.
 The goals of this assignment are:
 
 - Show how algorithms have different behaviors as the microarchitecture changes.
-- Show how changing the algorithm can change performance on the *same* microarchitecture.
-- Improve your understanding of cache architectures.
+- Show how changing the algorithm can change performance on the *same* microarchitecture
+- Improve your understanding of cache architectures
 
 The assignment is due on *{{ site.data.course.dates.gem5_4}}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 4]({{'modules/gem5/assignment4' | relative_url}}).
 
-## Assignment 5
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment4_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment4_invitation_link }}
 
-In this assignment, you will explore the performance bottlenecks in poorly-written parallel code.
-We will take a very simple application, summing the values in an array, and see how if you are not careful how you parallelize the application, the performance will become quite poor.
+## Assignment 5: *Virtual Memory*
 
-Then, after seeing which algorithms perform well and poorly on real hardware, we will use a cycle-level simulator ([gem5](https://www.gem5.org/)) with a detailed cache model to understand the performance.
+In this assignment, you will explore the performance impacts of different virtual memory configurations on a variety of workloads.
+You will investigate the impact of page size, TLB size, and associativity on performance.
+The goals of this assignment are:
+
+- Show how virtual memory configurations can impact performance
+- Show how different workloads can have different behaviors
+- Improve your understanding of virtual memory
 
 The assignment is due on *{{ site.data.course.dates.gem5_5}}*.
 Read about submission deadlines on the assignment page.
 
 Start [assignment 5]({{'modules/gem5/assignment5' | relative_url}}).
+
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment5_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment5_invitation_link }}
+
+## Assignment 6: *False sharing*
+
+In this assignment, you will explore the performance bottlenecks in poorly-written parallel code, specifically false sharing.
+It uses a simple parallel workload, shows 6 different implementations, and asks the students to figure out why the performance is different.
+Then, after seeing which algorithms perform well and poorly on real hardware, we will use a cycle-level simulator ([gem5](https://www.gem5.org/)) with a detailed cache model to understand the performance.
+
+The assignment is due on *{{ site.data.course.dates.gem5_6}}*.
+Read about submission deadlines on the assignment page.
+
+Start [assignment 6]({{'modules/gem5/assignment6' | relative_url}}).
+
+> GitHub Classroom link for 154B: {{ site.data.course.154b_assignment6_invitation_link }}
+>
+> GitHub Classroom link for 201A: {{ site.data.course.201a_assignment6_invitation_link }}
