--- a/modules/gem5/_posts/2000-01-01-index.md
+++ b/modules/gem5/_posts/2000-01-01-index.md
@@ -6,14 +6,14 @@ Title: gem5 Assignments (for ECS 201A)
 
 ## Table of contents
 
-- [Assignment 0](#assignment-0)
-- [Assignment 1](#assignment-1)
-- [Assignment 2](#assignment-2)
-- [Assignment 3](#assignment-3)
-- [Assignment 4](#assignment-4)
-- [Assignment 5](#assignment-5)
+- [Assignment 0](#assignment-0-getting-started)
+- [Assignment 1](#assignment-1-isa-vs-technology)
+- [Assignment 2](#assignment-2-pipelining)
+- [Assignment 3](#assignment-3-out-of-order-cpu)
+- [Assignment 4](#assignment-4-blocked-matrix-multiply)
+- [Assignment 5](#assignment-5-virtual-memory)
 
-## Assignment 0*Getting started*
+## Assignment 0: *Getting started*
 
 A simple assignment to get students started with gem5.
 This will introduce the students to how to use gem5, codespaces, etc.
